Salesforce/main/default/objects/Lote__c/fields/Fertilidade_solo__c.field-meta.xml
<CustomField>
    <fullName>Fertilidade_solo__c</fullName>
    <label>Fertilidade solo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>