Salesforce/main/default/objects/Lote__c/fields/Quantidade_de_sementes__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_sementes__c</fullName>
    <label>Quantidade de sementes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>