Salesforce/main/default/objects/Lote__c/fields/Unidade_medida__c.field-meta.xml
<CustomField>
    <fullName>Unidade_medida__c</fullName>
    <label>Unidade Medida</label>
    <length>20</length>
    <type>Text</type>
</CustomField>