Salesforce/main/default/objects/Lote__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lotes</relationshipLabel>
    <relationshipName>Lotes</relationshipName>
    <type>Lookup</type>
</CustomField>